second line added

--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
 <h1>
     "Hello There, you are accessing this from visual studio code"
 </h1>
+<h2>
+    "Efforts that you take today will server you a bettser future tomorrow"
+</h2>
